# SmallFastRayTracer

./: CMakeLists.txt  main.c
